--- a/front/src/components/partes_tela2/Grafico.css
+++ b/front/src/components/partes_tela2/Grafico.css
@@ -1,5 +1,38 @@
-.Grafico{
-    border: 4px solid black;
-    width: 74%;
+.Grafico-geral {
+    border: 0;
     height: 35rem;
+    width: 75%;    
 }
+
+.Grafico {
+    border: 4px solid black;
+
+    p{
+        margin-left: 10px;
+        color: #0F1827;
+    }
+}
+
+.datas {
+    position: relative;
+    align-items: end;
+    width: 100%;
+    display: flex;
+    gap: 5px;
+
+    .botao {
+        padding: 10px 15px;
+        background-color: #18A3E0;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+    }
+    
+    .botao:hover {
+        background-color: #0F1827;
+    }
+
+}    
+
